B&L QA/objects/Order_Line_Item__c.object
<CustomObject>
    <description>NORDCSS: This is the object which holds the line items of orders.</description>
    <fields>
        <fullName>Customer_PO_No__c</fullName>
        <label>Customer PO No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Displays the line number for all order line items</description>
        <label>Item No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lookup_Quantity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Inventory table which stores stock information based on Ship From field.</inlineHelpText>
        <label>Lookup Quantity</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Serial_ID__c</fullName>
        <description>Populated with ps_bl_ordline_chld.SERIAL_ID for consignment orders.</description>
        <label>Lot/Serial ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Group__c</fullName>
        <label>Order Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STD</fullName>
                    <default>true</default>
                    <label>STD</label>
                </value>
                <value>
                    <fullName>CAMP</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>FOCRPL</fullName>
                </value>
                <value>
                    <fullName>LEVAVT</fullName>
                </value>
                <value>
                    <fullName>PROMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Line_Number__c</fullName>
        <description>Contains the peoplesoft format line number (order number plus the line number).</description>
        <externalId>true</externalId>
        <label>Order Line Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Status__c</fullName>
        <label>Order Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order_Header__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override_Price__c</fullName>
        <inlineHelpText>If overriding the price, please enter an Adjustment Reason</inlineHelpText>
        <label>Override Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Product_SKU__c</fullName>
        <description>This field will be used in integration for pushing the Peoplesoft SKU back into Peoplesoft when new orders are created in Salesforce.</description>
        <label>PS Product SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Ref_No__c</fullName>
        <label>Patient Ref. No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_From__c</fullName>
        <label>Ship From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EURLC</fullName>
                    <default>true</default>
                    <label>EURLC</label>
                </value>
                <value>
                    <fullName>EURCD</fullName>
                </value>
                <value>
                    <fullName>VCLSU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OL-{MM}{000000}</displayFormat>
        <label>Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>